<resources>
    <string name="app_name">Legal Soft</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Legal Soft</string>
    <string name="action_logout">Log Out</string>
    <string-array name="home_menu">
        <item>Definition</item>
        <item>Employee Staff</item>
        <item>Case</item>
        <item>Forms</item>
        <item>Reports</item>
        <item>Validation</item>
        <item>Contact Us</item>
        <item>Log Out</item>
    </string-array>
    <integer-array name="home_icon">
        <item>@drawable/ic_action_edit</item>
        <item>@drawable/ic_action_add_group</item>
        <item>@drawable/ic_action_collection</item>
        <item>@drawable/ic_action_dock</item>
        <item>@drawable/ic_action_important</item>
        <item>@drawable/ic_action_read</item>
    </integer-array>

    <string-array name="employee_status_values">
        <item>Active</item>
        <item>Non Active</item>
        <item>All</item>
    </string-array>

    <string-array name="tab_employee_detail">
        <item>General</item>
        <item>Finance</item>
        <item>Leaves</item>
    </string-array>

    <string-array name="tab_case_detail">
        <item>General</item>
        <item>Follow Up</item>
        <item>Finance</item>
        <item>Attachment</item>
    </string-array>


    <string-array name="camera_gallery_array">
        <item>From Gallery</item>
        <item>From Camera</item>
    </string-array>

    <string name="title_activity_master">Legal Soft</string>
    
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Employee fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_first">action_first</string>
    <string name="action_second">action_second</string>
    <string name="action_client">Clients</string>
    <string name="action_employee">Employees</string>
    <string name="title_activity_employee_detail">EmployeeDetail</string>

    <string name="hello_world">Hello world!</string>
    <string name="volley_time_out">Oops ! Timeout error occured !</string>
    <string name="volley_server_error">Oops! Server error occured !</string>
    <string name="volley_network_error">Oops ! Network error occured !</string>
    <string name="volley_parse_error">Oops ! parse error occured !</string>
    <string name="pick_option">Pick an Opttion</string>
    <string name="title_activity_employee_salary">Employee Salary</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="action_openmap">Open Maps</string>
    <string name="mnuSpecialist">Specialist</string>
    <string name="mnuMainCourt">Main Court</string>
    <string name="mnuDefender">Defender</string>
    <string name="mnuSubCourt">Sub Court</string>
    <string name="mnuEmployee">Employee</string>
    <string name="mnuClient">Client</string>
    <string name="mnuCaseAll">Case List</string>
    <string name="mnuCaseFollowup">Case Followup</string>
    <string name="mnuCaseFollowup2">Case Followup 2</string>
    <string name="mnuCaseAdministration">Case Administration</string>
    <string name="mnuSearch">Search</string>
    <string name="mnuCloseCase">CLose Case</string>
    <string name="mnuNextHearing">Next Hearing</string>
    <string name="mnuJudgementDate">Judgement Date</string>
    <string name="mnuGeneralReport">General Report</string>
    <string name="mnuDailyTimeSheet">Daily Time Sheet</string>
    <string name="mnuEmployeeAllowance">Employee Allowance</string>
    <string name="mnuEmployeeLeave">Employee Leave</string>
    <string name="mnuEmployeeLoan">Employee Loan</string>
    <string name="mnuInbox">Inbox</string>
    <string name="mnuOfficeIncome">Office Income</string>
    <string name="mnuOfficeExpense">Office Expense</string>
    <string name="mnuMonthlyExpense">Monthly Expense</string>
    <string name="mnuOptions">Options</string>
    <string name="mnuSignOut">Sign Out</string>
    <string name="mnuDefinition">Definition</string>
    <string name="mnuContactUs">Contact Us</string>
    <string name="action_search">search</string>
</resources>
